--- a/style.scss
+++ b/style.scss
@@ -282,8 +282,8 @@ footer {
 
 .share-page {
     text-align: center;
-    background: $secondary-color;
-    color: $light-color;
+    background: $white;
+    color: $blue;
     padding: 8px 15px;
     border-radius: 5px;
     margin: 1.5 * $spacing-unit 0;
