--- a/style.scss
+++ b/style.scss
@@ -286,7 +286,7 @@ footer {
     color: $blue;
     padding: 8px 15px;
     border-radius: 5px;
-    margin: 1.5 * $spacing-unit 0;
+    margin: 1.5 * 2 0;
 
     a {
         font-weight: 700;
