--- a/style.scss
+++ b/style.scss
@@ -280,6 +280,28 @@ footer {
   text-align: center;
 }
 
+
+
+.share-page {
+    text-align: center;
+    background: grey;
+    color: grey;
+    padding: 8px 15px;
+    border-radius: 5px;
+    margin: 1.5 * 5 0;
+
+    a {
+        font-weight: 700;
+        color: #fff;
+        margin-left: 10px;
+
+        &:hover {
+            border-bottom: 1px dashed #fff;
+        }
+    }
+}
+
+
 // ----------------------------------
 // table custom css taken from github
 // ----------------------------------
