--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,6 @@ layout: default
     {{ content }}
   </div>
   
-  {% include dhare-page.html %}
+  {% include share-page.html %}
   {% include disqus.html disqus_identifier=page.disqus_identifier %}
 </article>
