--- a/style.scss
+++ b/style.scss
@@ -288,7 +288,7 @@ footer {
     //padding: 8px 15px;
     //border-radius: 5px;
     //margin: 1.5 * 5 0;
-
+/*
     a {
         font-weight: 700;
         color: #fff;
@@ -303,6 +303,21 @@ footer {
             border-bottom: 1px dashed #fff;
         }
     }
+    */
+    a {
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    border: solid 1px #20538D;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+    background: #4479BA;
+    color: #FFF;
+    padding: 8px 12px;
+    text-decoration: none;
+}
 }
 
 
