--- a/style.scss
+++ b/style.scss
@@ -296,6 +296,7 @@ footer {
     padding: 8px 12px;
     font-family: $helveticaNeue;
     text-decoration: none;
+    text-shadow: 2px 2px #ff0000;
 }
 }
 
