--- a/style.scss
+++ b/style.scss
@@ -296,7 +296,7 @@ footer {
     padding: 8px 12px;
     font-family: $helveticaNeue;
     text-decoration: none;
-    text-shadow: 1px 1px #d6d6c2;
+    text-shadow: 0px 0px 3px #d6d6c2;
 }
 }
 
