--- a/style.scss
+++ b/style.scss
@@ -293,8 +293,9 @@ footer {
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
     background: #4479BA;
     color: #FFF;
-    padding: 6px 10px;
+    padding: 5px 9px;
     font-family: $helveticaNeue;
+    font-size: 80%;
     text-decoration: none;
     text-shadow: 0px 0px 3px #d6d6c2;
     }
