--- a/_includes/share-page.html
+++ b/_includes/share-page.html
@@ -4,6 +4,6 @@
     <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook" style="background: #0000b3">Facebook</a>
     <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Google+" style="background: #ff3333; color: black">Google+</a>
     <a href="http://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on LinkedIn" style="background: #0033cc">LinkedIn</a>
-    <a href="http://pinterest.com/pin/create/button/?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Pinterest" style="background: #e60000">Pinterest</a>
+    <a href="http://pinterest.com/pin/create/button/?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Pinterest" style="background: #e60000; color: black">Pinterest</a>
     
 </div>
