--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -12,9 +12,9 @@
 
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
-  padding: 2px 4px;
-  background-color: #f7f7f9;
-  border: 1px solid #e1e1e8;
+  padding: 2px 3px;
+  background-color: #efefef;
+  border: 1px solid #efefef;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
