smaller font size

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -11,6 +11,7 @@
 }
 
 code {
+  font-size: 90%;
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
   padding: 1px 1px;
   background-color: #efefef;
