--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,8 +10,10 @@ layout: default
 
   <div class="entry">
     {{ content }}
+      <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   </div>
   
   {% include share-page.html share-page_identifier=page.share-page_identifier %}
   {% include disqus.html disqus_identifier=page.disqus_identifier %}
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </article>
