--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,9 +14,8 @@ layout: default
   
   {% include share-page.html share-page_identifier=page.share-page_identifier %}
   {% include disqus.html disqus_identifier=page.disqus_identifier %}
-  
-  <script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-  </script>
-  
 </article>
+
+    <script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
