Add: new style of images

--- a/style.scss
+++ b/style.scss
@@ -315,3 +315,5 @@ table tr:nth-child(2n){background-color:#f8f8f8}
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
 @import "svg-icons";
+@import "image";
+
