--- a/style.scss
+++ b/style.scss
@@ -162,8 +162,8 @@ img {
 
 .site-avatar {
   float: left;
-  width: 200px;
-  height: 100px;
+  width: 210px;
+  height: 120px;
   margin-right: 15px;
   margin-top: -42px;
 
@@ -171,6 +171,7 @@ img {
     float: none;
     display: block;
     margin: 0 auto;
+    margin-top: -10px;
   }
 
   img {
