--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -22,3 +22,14 @@ img {
 img {
   border: 0.01px solid #ccc ;
 }
+
+img.emoji {
+  display: inline;
+  border: none ;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin: auto;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+}
