--- a/_includes/share-page.html
+++ b/_includes/share-page.html
@@ -5,5 +5,7 @@
     <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Google+" style="background: #ff3333; color: black">Google+</a>
     <a href="http://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on LinkedIn" style="background: #0033cc">LinkedIn</a>
     <a href="http://pinterest.com/pin/create/button/?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Pinterest" style="background: #e60000; color: black">Pinterest</a>
-    
+    <a  href="http://www.reddit.com/submit?url={{ site.url }}{{ site.baseurl }}{{ page.url }}"
+	        onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=900,height=500,toolbar=1,resizable=0'); return false;"
+	        title="Share on Reddit" style="background: #33CCFF; color: black" >reddit</a>
 </div>
