Update: new img tag

--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -33,3 +33,14 @@ img.emoji {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
 }
+
+img.avatar {
+  display: inline;
+  border: none ;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin: auto;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+}
