--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -37,10 +37,9 @@ img.emoji {
 img.avatar {
   display: inline;
   border: none ;
-  margin-top: auto;
-  margin-bottom: auto;
-  margin: auto;
-  box-shadow: none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  box-shadow: 2px 2px 2px -2px rgba(0, 0, 0, 0.45);
+  -webkit-box-shadow: 2px 2px 2px -2px rgba(0, 0, 0, 0.45);;
+  -moz-box-shadow: 2px 2px 2px -2px rgba(0, 0, 0, 0.45);;
 }
