--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -36,7 +36,7 @@ img.emoji {
 
 img.avatar {
   display: inline;
-  border: none ;
+  border: 0px none #000000;
   margin-top: 2px;
   margin-bottom: 2px;
   box-shadow: 2px 2px 2px -2px rgba(0, 0, 0, 0.45);
