--- a/_layouts/blog_index.html
+++ b/_layouts/blog_index.html
@@ -7,3 +7,7 @@ layout: page
     <li><a href="{{ post.url }}">{{ post.date | date: "%Y-%m-%d" }} - {{ post.title }}</a></li>
   {% endfor %}
 </ul>
+
+<img src="/cloud.png" width="400" height="300" border="0"/>
+
+Source.
