Add: word-cloud

--- a/_layouts/blog_index.html
+++ b/_layouts/blog_index.html
@@ -8,6 +8,6 @@ layout: page
   {% endfor %}
 </ul>
 
-<img src="/cloud.png" width="400" height="300" border="0"/>
+<img src="/images/cloud.png" width="400" height="300" border="0"/>
 
-Source.
+The source code for a creation of word-cloud can be checked on my <a target="_blank" href="">GitHub repository</a>.
