--- a/_layouts/blog_index.html
+++ b/_layouts/blog_index.html
@@ -8,6 +8,6 @@ layout: page
   {% endfor %}
 </ul>
 
-<img title="The word-cloud of blog posts" src="/images/cloud.png" width="480" height="330" border="0"/>
+<img title="The word-cloud of blog posts" src="/images/BlogWords2.png" width="550" height="450" border="0"/>
 
 The source code for a creation of the word-cloud from my all blog posts can be checked on my <a target="_blank" href="https://github.com/PetoLau/petolau.github.io/blob/master/_Rscripts/wordcloud.R">GitHub repository</a>.
