--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
+    
+    <meta content="text/html; charset=utf-8">
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
 
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
-
+    <meta property="og:title" content="{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}">
     <meta name="author" content="{{ site.name }}" />
     <meta name="description" content="{{ site.description }}">
-
+    <meta property="og:description" content="{{ site.description }}">
+    <meta name="keywords" content="{{ site.description }}, R programming, Data science, Smart meters, Forecasting, Regression analysis, Nonlinear regression, Data analysis">
+    <meta property="og:image" content="{{ site.avatar }}">
+    <meta property="og:url" content="{{ site.baseurl }}">
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
