--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="{{ site.description }}">
     <meta name="keywords" content="{{ site.description }}, R programming, Data science, Smart meters, Forecasting, Regression analysis, Nonlinear regression, Data analysis">
     <meta property="og:image" content="{{ site.avatar }}">
-    <meta property="og:url" content="https://{{ site.baseurl }}">
+    <meta property="og:url" content="https://petolau.github.io">
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
