--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
 
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
     
-    <!--<meta property="og:title" content="{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}">-->
+    <meta property="og:title" content="{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}">
     <meta name="author" content="{{ site.name }}" />
     <meta name="description" content="{{ site.description }}">
-    <!--<meta property="og:description" content="{{ site.description }}">-->
+    <meta property="og:description" content="{{ site.description }}">
     <meta name="keywords" content="{{ site.description }}, R programming, Data science, Smart meters, Forecasting, Regression analysis, Nonlinear regression, Data analysis">
     <!--<meta property="og:image" content="https://petolau.github.io/images/sitelogo.png">-->
     <!--<meta property="og:url" content="https://petolau.github.io/">-->
