Update: og meta

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
     <meta name="description" content="{{ site.description }}">
     <meta property="og:description" content="{{ site.description }}">
     <meta name="keywords" content="{{ site.description }}, R programming, Data science, Smart meters, Forecasting, Regression analysis, Nonlinear regression, Data analysis">
-    <!--<meta property="og:image" content="https://petolau.github.io/images/sitelogo.png">-->
-    <!--<meta property="og:url" content="https://petolau.github.io/">-->
+    <!--<meta property="og:image" content="https://petolau.github.io/images/sitelogo.png;">-->
+    <meta property="og:url" content="{{ page.baseurl }}">
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
