--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <meta name="author" content="{{ site.name }}" />
     <meta name="description" content="{{ site.description }}">
     <meta property="og:description" content="{{ site.description }}">
-    <meta name="keywords" content="{{ site.description }}, R programming, Data science, Smart meters, Forecasting, Regression analysis, Nonlinear regression, Data analysis">
+    <meta name="keywords" content="{{ site.description }}, R programming, Data science, Forecasting, Regression analysis, Data analysis">
     <!--<meta property="og:image" content="https://petolau.github.io/images/sitelogo.png;">-->
     <meta property="og:url" content="{{ page.baseurl }}">
     <!--[if lt IE 9]>
