--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <meta property="og:description" content="{{ site.description }}">
     <meta name="keywords" content="{{ site.description }}, R programming, Data science, Forecasting, Regression analysis, Data analysis">
     <!--<meta property="og:image" content="https://petolau.github.io/images/sitelogo.png;">-->
-    <meta property="og:url" content="{{ page.url }}">
+    <meta property="og:url" content="{{ site.baseurl }}{{ page.url }}">
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
