--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,7 @@
             <a href="{{ site.baseurl }}/blog">Blog</a>
             <a href="{{ site.baseurl }}/tags">Tags</a>
             <a href="{{ site.baseurl }}/links">Links</a>
+            <a href="{{ site.baseurl }}/research">Research</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
