--- a/_layouts/blog_index.html
+++ b/_layouts/blog_index.html
@@ -11,3 +11,5 @@ layout: page
 <img title="The word-cloud of blog posts" src="/images/blog_words_4.png" width="570" height="520" border="0"/>
 
 The source code for a creation of the word-cloud from my all blog posts can be checked on my <a target="_blank" href="https://github.com/PetoLau/petolau.github.io/blob/master/_Rscripts/wordcloud.R">GitHub repository</a>.
+
+{% include share-page.html share-page_identifier=page.share-page_identifier %}
