Update: name of site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
             <a href="{{ site.baseurl }}/tags">Tags</a>
             <a href="{{ site.baseurl }}/links">Links</a>
             <a href="{{ site.baseurl }}/research">Research</a>
-            <a href="{{ site.baseurl }}/package">R</a>
+            <a href="{{ site.baseurl }}/package">TSrepr</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
