--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,8 +64,7 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          <h2>Follow me on: </h2>
-          {% include svg-icons.html %}
+          <h2>Follow me on: {% include svg-icons.html %}</h2>
         </footer>
       </div>
     </div>
