Update: text foot

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          <h2>Follow me on: {% include svg-icons.html %}</h2>
+          <font size="5"><b>Follow me on: </b></font> {% include svg-icons.html %}
         </footer>
       </div>
     </div>
