Update: foot html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          {<font size="5"><b>Follow me on: </b></font> % include svg-icons.html %}
+          {% include svg-icons.html %}
         </footer>
       </div>
     </div>
