--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -1,4 +1,4 @@
-{<a><font size="5"><b>Follow me on: </b></font></a>}
+<font size="5"><b>Follow me on: </b></font>
 {% if site.footer-links.dribbble %}<a href="https://dribbble.com/{{ site.footer-links.dribbble }}"><i class="svg-icon dribbble"></i></a>{% endif %}
 {% if site.footer-links.email %}<a href="mailto:{{ site.footer-links.email }}"><i class="svg-icon email"></i></a>{% endif %}
 {% if site.footer-links.facebook %}<a href="https://www.facebook.com/{{ site.footer-links.facebook }}"><i class="svg-icon facebook"></i></a>{% endif %}
