--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,9 @@ layout: default
     {{ content }}
   </div>
   
-  <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#46b798', 'M4M7N8ZS');kofiwidget2.draw();</script>
+  
+  <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript' align="middle">kofiwidget2.init('Support Me on Ko-fi', '#46b798', 'M4M7N8ZS');kofiwidget2.draw();</script>
+  
   {% include share-page.html share-page_identifier=page.share-page_identifier %}
   {% include disqus.html disqus_identifier=page.disqus_identifier %}
 </article>
