Update: Kofi align

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,9 +12,13 @@ layout: default
     {{ content }}
   </div>
   
-  <p align = "middle">Seven coffees were consumed while writing this article.</p>
-  <p align = "middle">If you’ve found it valuable, please consider supporting my work and...</p>
-  <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript' >kofiwidget2.init('Buy Me a Ko-fi', '#46b798', 'M4M7N8ZS');kofiwidget2.draw();</script>
+  
+   <div style="align:middle">
+       <hr>
+       <p><i>Seven coffees were consumed while writing this article.</i></p>
+       <p><i>If you’ve found it valuable, please consider supporting my work and...</i></p>
+       <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript' >kofiwidget2.init('Buy Me a Ko-fi', '#46b798', 'M4M7N8ZS');kofiwidget2.draw();</script>
+   </div> 
   
   {% include share-page.html share-page_identifier=page.share-page_identifier %}
   {% include disqus.html disqus_identifier=page.disqus_identifier %}
