--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
   </div>
   
   
-   <div style="align:middle">
+   <div class="container">
        <hr>
        <p><i>Seven coffees were consumed while writing this article.</i></p>
        <p><i>If you’ve found it valuable, please consider supporting my work and...</i></p>
