--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,11 +13,12 @@ layout: default
   </div>
   
   
-   <div class="container">
+   <div class="center">
        <hr>
        <p><i>Seven coffees were consumed while writing this article.</i></p>
        <p><i>If you’ve found it valuable, please consider supporting my work and...</i></p>
        <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript' >kofiwidget2.init('Buy Me a Ko-fi', '#46b798', 'M4M7N8ZS');kofiwidget2.draw();</script>
+       <hr>
    </div> 
   
   {% include share-page.html share-page_identifier=page.share-page_identifier %}
