--- a/_layouts/blog_index.html
+++ b/_layouts/blog_index.html
@@ -8,8 +8,8 @@ layout: page
   {% endfor %}
 </ul>
 
-<img title="The word-cloud of blog posts" src="/images/blog_cloud_5.png" width="540" height="500" border="0"/>
+<img title="The word-cloud of blog posts" src="/images/blog_wordcloud.png" width="740" height="500" border="0"/>
 
-The source code for a creation of the word-cloud from my all blog posts can be checked on my <a target="_blank" href="https://github.com/PetoLau/petolau.github.io/blob/master/_Rscripts/wordcloud.R">GitHub repository</a>.
+The source code for a creation of the word-cloud from my all blog posts can be checked on my <a target="_blank" href="https://github.com/PetoLau/petolau.github.io/blob/master/_Rscripts/wordcloud_v2.R">GitHub repository</a>.
 
 {% include share-page.html share-page_identifier=page.share-page_identifier %}
