wider objects than screen issues fix

--- a/_sass/_images.scss
+++ b/_sass/_images.scss
@@ -5,7 +5,7 @@ img {
 	box-shadow: 6px 9px 48px -29px rgba(0, 0, 0, 0.45);
 }
 
-img{
+img {
 	margin-top: 2rem;
 	margin-bottom: 1rem;
   display: block;
@@ -20,6 +20,7 @@ img {
 }
 
 img {
+  max-width: 100%;
   border: 0.01px solid #ccc ;
 }
 
