--- a/style.scss
+++ b/style.scss
@@ -319,6 +319,20 @@ footer {
   }
 }
 
+.wrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+
+.wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
 // ----------------------------------
 // table custom css taken from github
