--- a/style.scss
+++ b/style.scss
@@ -313,11 +313,11 @@ footer {
   padding: .2em;
 }
 
-@media (pointer: coarse) {
-  .container a {
-    padding: .8em;
-  }
-}
+//@media (pointer: coarse) {
+//  .container a {
+//    padding: .8em;
+//  }
+//}
 
 .wrapper {
     position: relative;
