--- a/style.scss
+++ b/style.scss
@@ -309,9 +309,9 @@ footer {
     }
 }
 
-.container a {
-  padding: .2em;
-}
+//.container a {
+//  padding: .2em;
+//}
 
 //@media (pointer: coarse) {
 //  .container a {
